fix: Improve JWT authentication filter and security configuration
- Refactor JwtAuthenticationFilter to skip auth for whitelisted endpoints
- Add shouldNotFilter method to efficiently bypass authentication for public paths
- Update SecurityConfig with proper CORS configuration and endpoint permissions
- Enhance error handling in JWT authentication process